--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,16 +5,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 2rem;
+  width: 100%;
+  max-width: 1200px;
 }
 
 .footer {
@@ -47,7 +46,8 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
+  text-transform: uppercase;
 }
 
 .title,
@@ -111,6 +111,59 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+.submit {
+  font-size: 1.5rem;
+  color: #FFFFFF;
+  background-color: #009B86;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  width: auto;
+  margin: 20px 0 10px auto;
+  text-transform: uppercase;
+}
+.submit:hover {
+  color: #CCCCCC;
+}
+
+/* The Modal (background) */
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  color: gray;
+  text-align: center;
+  font-size: 2rem;
+}
+/* Modal Content */
+.modal__content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+/* The Close Button */
+.modal__close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.modal__close:hover,
+.modal__close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media (max-width: 600px) {
